fix: overlapping

--- a/src/components/Background/style.scss
+++ b/src/components/Background/style.scss
@@ -39,7 +39,7 @@
 }
 
 #circle-2 {
-    height: 8.5vw;
+    height: 6.5vw;
     top: 3.4vw;
     left: 22vw;
     z-index: 3;
